<resources>
    <string name="app_name">MOCCAD Home</string>
    <string name="action_settings">Settings</string>
    <string name="action_enter_weights">Enter Weights</string>
    <string name="action_display_cache">Display Cache</string>
    <string name="main_activity_head">Namaste!!!</string>
    <string name="main_activity_button">Fetch results</string>
    <string name="title_activity_query_results">Query Results</string>
    <string name="query_result">Query Results</string>
    <string name="disp_json_btn">Display Results</string>
    <string name="fetch_json_btn">Fetch Query Results</string>
    <string name="title_activity_weights">Weights</string>
    <string name="title_activity_display_cache">Display cache</string>

    <string name="cache_manager_settings">Cache manager settings</string>

    <string name="pref_cache_type">Type of Cache</string>
    <string-array name="pref_cache_type_list_titles">
        <item>No Cache</item>
        <item>Semantic Caching</item>
        <item>Decisional Semantic Caching</item>
    </string-array>
    <string-array name="pref_cache_type_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_use_replacement">Use Replacement</string>
    <string name="pref_use_replacement_summ">Replace query resutls in cache or leave the cache content unmodified</string>


    <string name="connection_settings">Connection Settings</string>

    <string name="pref_data_access_provider">Data Access Provider</string>

    <string-array name="pref_data_access_provider_list_titles">
        <item>Stub Data Access Provider</item>
        <item>Cloud Data Access Provider</item>
    </string-array>
    <string-array name="pref_data_access_provider_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="pref_ip_address">Web server IP address</string>
    <string name="pref_port">Web service connection port</string>


    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_settings">Settings</string>

    <string name="query_cache_settings">Query cache settings</string>

    <string name="pref_max_number_segment">Maximum number of segment</string>

    <string-array name="pref_max_number_segment_list_titles">
        <item>0 (unlimited)</item> <!-- unlimited -->
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
    </string-array>
    <string-array name="pref_max_number_segment_list_values">
        <item>0</item> <!-- unlimited -->
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
    </string-array>

    <string name="pref_max_size">Maximum size</string>

    <string-array name="pref_max_cache_size_list_titles">
        <item>10MB</item>
        <item>20MB</item>
        <item>30MB</item>
        <item>40MB</item>
        <item>50MB</item>
        <item>100MB</item>
        <item>200MB</item>
        <item>300MB</item>
        <item>400MB</item>
        <item>500MB</item>
    </string-array>
    <string-array name="pref_max_cache_size_list_values">
        <item>10000000</item>
        <item>20000000</item>
        <item>30000000</item>
        <item>40000000</item>
        <item>50000000</item>
        <item>100000000</item>
        <item>200000000</item>
        <item>300000000</item>
        <item>400000000</item>
        <item>500000000</item>
    </string-array>

    <string name="set_data_access_provider_message">Setting new data access providerâ€¦</string>
    <string name="connection_error_message">Impossible to connect to the web service, please check the settings</string>
    <string name="parsing_error_message">Data format error, the server does not return correct value(s)</string>
    <string name="connection_error">Connection Error</string>
    <string name="set_cache_type_message">Setting new cache type</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_query_builder_new">QueryBuilderNew</string>

</resources>
